[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/DebugInfo/DebugInfo.gd" type="Script" id=1]
[ext_resource path="res://UI/DebugInfo/PositionDisplay.gd" type="Script" id=2]
[ext_resource path="res://UI/DebugInfo/WireframeToggle.gd" type="Script" id=3]
[ext_resource path="res://UI/MoveSpeed/MoveSpeed.tscn" type="PackedScene" id=4]

[sub_resource type="Theme" id=1]

[node name="DebugInfo" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="DebugPanel" type="Panel" parent="."]
margin_right = 1920.0
margin_bottom = 894.0
rect_min_size = Vector2( 200, 500 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 1 )

[node name="DebugText" type="RichTextLabel" parent="DebugPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
scroll_following = true

[node name="LogLevelInfo" type="HBoxContainer" parent="."]
margin_top = 898.0
margin_right = 1920.0
margin_bottom = 914.0

[node name="Label" type="Label" parent="LogLevelInfo"]
margin_top = 1.0
margin_right = 61.0
margin_bottom = 15.0
text = "Log level:"

[node name="LogLevelSlider" type="HSlider" parent="LogLevelInfo"]
margin_left = 65.0
margin_right = 1920.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 4.0
ticks_on_borders = true

[node name="PositionDisplay" type="HBoxContainer" parent="."]
margin_top = 918.0
margin_right = 1920.0
margin_bottom = 932.0
script = ExtResource( 2 )

[node name="Name" type="Label" parent="PositionDisplay"]
margin_right = 60.0
margin_bottom = 14.0
text = "Position: "

[node name="Data" type="Label" parent="PositionDisplay"]
margin_left = 64.0
margin_right = 64.0
margin_bottom = 14.0

[node name="Spacer" type="MarginContainer" parent="."]
margin_top = 936.0
margin_right = 1920.0
margin_bottom = 956.0
rect_min_size = Vector2( 0, 20 )

[node name="VisualHeading" type="Label" parent="."]
margin_top = 960.0
margin_right = 1920.0
margin_bottom = 974.0
text = "Visual settings:"
uppercase = true

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_top = 978.0
margin_right = 1920.0
margin_bottom = 1018.0

[node name="WireframeToggle" type="HBoxContainer" parent="MarginContainer2"]
margin_right = 1920.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="Name" type="Label" parent="MarginContainer2/WireframeToggle"]
margin_top = 13.0
margin_right = 78.0
margin_bottom = 27.0
text = "Wireframes:"

[node name="CheckButton" type="CheckButton" parent="MarginContainer2/WireframeToggle"]
margin_left = 82.0
margin_right = 158.0
margin_bottom = 40.0

[node name="Spacer2" type="MarginContainer" parent="."]
margin_top = 1022.0
margin_right = 1920.0
margin_bottom = 1042.0
rect_min_size = Vector2( 0, 20 )

[node name="GameplayHeading" type="Label" parent="."]
margin_top = 1046.0
margin_right = 1920.0
margin_bottom = 1060.0
text = "Gameplay settings:"
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 1064.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="MoveSpeed" parent="MarginContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 1920.0
margin_bottom = 16.0
